Fix text clipping

--- a/src/workoutsPage/WorkoutItem.scss
+++ b/src/workoutsPage/WorkoutItem.scss
@@ -12,6 +12,7 @@
     overflow: hidden;
     transition: transform 0.2s ease-in-out;
     transition-delay: 0.1s;
+    line-height: 1.5;
 
     &__index {
     }
